--- a/frontend/manifest.json
+++ b/frontend/manifest.json
@@ -14,6 +14,11 @@
     },
     "action": {
       "default_popup": "popup.html"
-    }
+    },
+    "web_accessible_resources": [
+      {
+        "resources": ["popup.js"],
+        "matches": ["<all_urls>"]
+      }
+    ]
   }
-  
